plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.samcomo'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// springBoot web, JPA
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	testImplementation 'org.springframework.batch:spring-batch-test'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// maria DB
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// mongo DB
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// AWS
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.redisson:redisson-spring-boot-starter:3.18.0'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// oauth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//FCM
	implementation 'com.google.firebase:firebase-admin:9.1.1'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'

	// Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Prometheus
	implementation 'io.micrometer:micrometer-registry-prometheus:latest.release'


}

tasks.named('test') {
	useJUnitPlatform()
}
